Fix problems in IE11
- Background image covers the entire initial banner when moved to .banner instead of .infobox

--- a/thank_you/css/styles.pcss
+++ b/thank_you/css/styles.pcss
@@ -186,7 +186,7 @@
 		flex-direction: column;
 		justify-content: space-between;
 		flex: 0 1 100%;
-		background: url( 'https://upload.wikimedia.org/wikipedia/commons/4/46/Thank-you-2017-background-600.svg' );
+		background: url( 'https://upload.wikimedia.org/wikipedia/commons/4/46/Thank-you-2017-background-600.svg' ) no-repeat center fixed;
 		background-size: cover;
 	}
 
@@ -218,6 +218,7 @@
 		.thankyou-items--list {
 			list-style: none;
 			margin: 0;
+			margin-right: 1px;
 			animation-name: change;
 			animation-duration: 10s;
 			animation-iteration-count: infinite;
